# cvxtorch

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
cvxtorch/: __init__.py  exp2tch.py  torch_expression.py
cvxtorch/torch_numerics/: cummax.py  dist_ratio.py  dotsort.py  eye_minus_inv.py  geo_mean.py  gmatmul.py  length.py  log_det.py  log_sum_exp.py  matrix_frac.py  max.py  min.py  norm1.py  norm_inf.py  norm_nuc.py  one_minus_pos.py  pf_eigenvalue.py  pnorm.py  prod.py  quad_form.py  quad_over_lin.py  sigma_max.py  sign.py  tr_inv.py
cvxtorch/torch_numerics/affine/: add_expr.py  conj.py  cumsum.py  diag_vec.py  div_expression.py  hstack.py  imag.py  index.py  kron.py  mul_expression.py  multiply.py  promote.py  real.py  reshape.py  sum.py  trace.py  transpose.py  unary_operators.py  upper_tri.py  vstack.py
cvxtorch/torch_numerics/elementwise/: abs.py  ceil.py  exp.py  log.py  logistic.py  maximum.py  minimum.py  power.py  xexp.py
cvxtorch/utils/: exp2tch.py  torch_utils.py
cvxtorch/variables_dict/: variables_dict.py
tests/: settings.py  test_gen_torch_exp.py  test_torch_numerics.py
